--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -7,7 +7,7 @@
   },
   "home": {
     "homepage": "Homepage",
-    "subtitle": "Join us on our special day"
+    "content_0": "This is a wedding of two introverts. Hence, expect nothing :-)"
   },
   "program": {
     "title": "Wedding Program"
