--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -7,7 +7,7 @@
   },
   "home": {
     "homepage": "Ci Sposiamo",
-    "subtitle": "Unisciti a noi nel nostro giorno speciale"
+    "content_0": "Questo è il matrimonio di due introversi. Quindi, non aspettatevi nulla :-)"
   },
   "program": {
     "title": "Programma del Matrimonio"
